Fix wrong cursor & align in admin table

--- a/assets/less/yourls.less
+++ b/assets/less/yourls.less
@@ -370,12 +370,11 @@ input, select {
 
 .keyword {
     text-align: center;
-    font-weight: 600;
 }
 
 .clicks {
-    font-weight: 500;
-    font-size: 2.5em;
+    font-size: 2.0em;
+    text-align: right;
 }
 
 .url {
@@ -559,21 +558,21 @@ input, select {
     &.bookmarklet-hilite {
         border: 1px solid #1F669C !important;
     }
-}
 
-strong {
-    cursor: default;
+    strong {
+        cursor: default;
 
-    &.booktype-help {
-        padding: 1px 3px;
-        border-radius: @border-radius-base;
-        border: 1px solid transparent;
+        &.booktype-help {
+            padding: 1px 3px;
+            border-radius: @border-radius-base;
+            border: 1px solid transparent;
 
-        &:hover,
-        &:focus,
-        &.bookmarklet-hilite {
-            background: #ccc;
-            border: 1px solid #aaa;
+            &:hover,
+            &:focus,
+            &.bookmarklet-hilite {
+                background: #ccc;
+                border: 1px solid #aaa;
+            }
         }
     }
 }
